Trying to fix text readability

--- a/css/style.css
+++ b/css/style.css
@@ -135,15 +135,15 @@ img {
 
 .history {
     /* border: 2px solid red; */
-    margin-bottom: 32px;
+    width: 565px;
+    margin: 0 auto 32px;
 }
 
 .history h2 {
     /* border: 2px solid red; */
-    font-size: 28px;
-    line-height: 38px;
-    font-weight: 600;
-    text-align: center;
+    font-size: 32px;
+    line-height: 42px;
+    font-weight: 700;
     margin-bottom: 8px;
 }
 
@@ -160,9 +160,10 @@ img {
 
 .grid-item {
     /* border: 2px solid red; */
-    margin-bottom: 32px;
     box-shadow: 0 0 2px rgba(0, 0, 0, 0.1), 0 0 24px rgba(0, 0, 0, 0.08);
     padding: 12px 18px;
+    width: 565px;
+    margin: 0 auto 32px;
 }
 
 .grid-item .header {
@@ -186,7 +187,7 @@ img {
 
 .grid-item p {
     font-size: 16px;
-    line-height: 24px;
+    line-height: 26px;
 
 }
 
@@ -227,6 +228,13 @@ img {
     height: 20px;
 }
 
+@media screen and (max-width: 630px) {
+    
+    .history, .grid-item {
+        width: 100%;
+    }
+}
+
 @media screen and (max-width: 768px) {
     
     .container{
@@ -259,6 +267,8 @@ img {
         border-bottom: 1px solid rgba(17, 17, 17, 0.08);
         padding-bottom: 12px;
     }
+
+    
 
     .another-source {
         width: 95%;
